# gedi

./: pyproject.toml
backbones/pointnet2_ops_lib/: setup.py
